packages/kit/test/apps/basics/src/routes/errors/endpoint-shadow-not-ok.svelte

<h1>this text should not appear</h1>
